setting up header and hero

--- a/index.html
+++ b/index.html
@@ -7,5 +7,27 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="hero">
+      <div id="header">
+        <h1>Header Logo</h1>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
+      <div id="hero">
+        <div id="hero-section">
+          <h1 id="title">This website is awesome</h1>
+          <p id="sub-title">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button id="hero-button">Sign Up</button>
+        </div>
+        <div id="hero-image">Placeholder image</div>
+      </div>
+    </div>
+  </body>
 </html>
