add information section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,28 @@
         <div id="hero-image">Placeholder image</div>
       </div>
     </div>
+    <div id="body">
+      <div id="information">
+        <h2>Some random information.</h2>
+        <ul>
+          <li>
+            <div>blank</div>
+            this is some subtext under an illustration or image
+          </li>
+          <li>
+            <div>blank</div>
+            this is some subtext under an illustration or image
+          </li>
+          <li>
+            <div>blank</div>
+            this is some subtext under an illustration or image
+          </li>
+          <li>
+            <div>blank</div>
+            this is some subtext under an illustration or image
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
