--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
           </li>
         </ul>
       </div>
+      <div id="quote">
+        <p id="quote-text">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actuall read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <div id="quote-author">-Thor, God of Thunder</div>
+      </div>
+      <div id="button">
+        <h2>Call to action! It's time!</h2>
+        <div>
+          Sign up for our product by clicking that button right over there!
+        </div>
+        <button>Sign up</button>
+      </div>
     </div>
   </body>
 </html>
