--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </p>
         <div id="quote-author">-Thor, God of Thunder</div>
       </div>
-      <div id="button">
+      <div id="call-section">
         <h2>Call to action! It's time!</h2>
         <div>
           Sign up for our product by clicking that button right over there!
@@ -67,5 +67,6 @@
         <button>Sign up</button>
       </div>
     </div>
+    <div id="footer">Copyright &copy; The Odin Project 2021</div>
   </body>
 </html>
